style: Adjust retro page background color

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         
         .retro-page {
-            background-color: #ff0000;
+            background-color: #cc0000;
         }
         
         .container {
