--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@ Are you Ok 级别高水平英语
             document.querySelector('.page').classList.toggle('dark-theme');
             const btn = document.querySelector('.theme-switch');
             if (document.querySelector('.page').classList.contains('dark-theme')) {
-                btn.textContent = '切换默认主题';
+                btn.textContent = '切换阳间主题';
             } else {
                 btn.textContent = '切换阴间主题';
             }
