docs: Update GitHub repository link in footer

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
             </div>
         </div>
         <div class="page-footer">
-            Github: <a href="https://github.com/beilunyang" target="_blank">BeilunYang</a>
+            Github: <a href="https://github.com/beilunyang/tudog-card-generator" target="_blank">BeilunYang</a>
         </div>
     </div>
 
